chore: sync to UIScope-jvm [2026-06-05 04:51:29]